update deploy url